fix results card button on small laptop media query

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -372,7 +372,7 @@ fieldset {
     }
 
     #character-card {
-        height: 72%;
+        height: 90%;
     }
 
     #character-img img {
